* 2006-01-15 Jeremy Sanders <jeremy@jeremysanders.net>
  - Convert FITS import to operations
  - All CommandInterface now uses operations
  - Fix FITS file detection code

* 2006-01-14 Jeremy Sanders <jeremy@jeremysanders.net>
  - Make fitting use operations
  - Update (some) commandinterface to use operations
  
* 2006-01-02 Jeremy Sanders <jeremy@jeremysanders.net>
  - Bug fix with missing axes
  - Update main copyright years to 2006
  
* 2006-01-01 Jeremy Sanders <jeremy@jeremysanders.net>
  - pychecker fixes
  - Yet more undo/redo changes (dataset edit)
  
* 2005-12-31 Jeremy Sanders <jeremy@jeremysanders.net>
  - Yet more undo/redo changes
  - Take dataset operations out of doc.py

* 2005-12-27 Jeremy Sanders <jeremy@jeremysanders.net>
  - Undo/redo implementation started

* 2005-11-27 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add GetClick command. Returns position on axes for user's click

* 2005-11-23 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add Pointer button, and enable graph zooming
	- Add EnableToolbar embedded command to enable graph toolbar
	
* 2005-11-21 Jeremy Sanders <jeremy@jeremysanders.net>
	- Allow contours to be clicked on
	
* 2005-11-19 Jeremy Sanders <jeremy@jeremysanders.net>
	- Reorganisation of view toolbar / menus into PlotWindow
	
* 2005-11-14 Jeremy Sanders <jeremy@jeremysanders.net>
	- Added options to hide horizontal and vertical error bars
	- Added "descriptor" command in data files to change descriptor
	on the fly
	
* 2005-11-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- Rubber band graph zooming mostly working
	
* 2005-11-06 Jeremy Sanders <jeremy@jeremysanders.net>
	- Imported matplotlib contour routine into source
	
* 2005-11-05 Jeremy Sanders <jeremy@jeremysanders.net>
	- Rejigged and cleaned contour setting work
	- Contour plotting and filling largely complete and functional
	
* 2005-11-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Much more contour setting work
	