@@ -2,7 +2,8 @@
   - Convert FITS import to operations
   - All CommandInterface now uses operations
   - Fix FITS file detection code
-
+  - Clear history after file loaded
+  
 * 2006-01-14 Jeremy Sanders <jeremy@jeremysanders.net>
   - Make fitting use operations
   - Update (some) commandinterface to use operations
